tests/ui/unknown_start.stderr
error: expected `try`, `require`, or `scope`, found `foo`
 --> tests/ui/unknown_start.rs:7:9
  |
7 |         foo  // not a valid keyword
  |         ^^^
